feat: implementar autenticación basada en cookies HttpOnly para login y refresh de tokens, y agregar verificación de headers de seguridad