@@ -3,6 +3,7 @@ package app.infrastructure.security;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
@@ -11,6 +12,8 @@ import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
+import org.springframework.security.web.csrf.CookieCsrfTokenRepository;
+import org.springframework.security.web.header.writers.XXssProtectionHeaderWriter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
@@ -40,7 +43,41 @@ public class SecurityConfig {
 
                 http
                                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-                                .csrf(csrf -> csrf.disable())
+                                // CSRF: Deshabilitado para endpoints REST (stateless JWT), habilitado para WebSocket
+                                .csrf(csrf -> csrf
+                                                .csrfTokenRepository(CookieCsrfTokenRepository.withHttpOnlyFalse())
+                                                .ignoringRequestMatchers(
+                                                                "/auth/**",
+                                                                "/api/**",
+                                                                "/services/**",
+                                                                "/employees/**",
+                                                                "/dealerships/**",
+                                                                "/tracking/**",
+                                                                "/settings/**",
+                                                                "/actuator/**",
+                                                                "/v3/api-docs/**",
+                                                                "/swagger-ui/**"))
+                                // Security Headers HTTP
+                                .headers(headers -> headers
+                                                .contentTypeOptions(Customizer.withDefaults())
+                                                .xssProtection(xss -> xss
+                                                                .headerValue(XXssProtectionHeaderWriter.HeaderValue.ENABLED_MODE_BLOCK))
+                                                .frameOptions(frame -> frame.deny())
+                                                .httpStrictTransportSecurity(hsts -> hsts
+                                                                .includeSubDomains(true)
+                                                                .maxAgeInSeconds(31536000))
+                                                .contentSecurityPolicy(csp -> csp
+                                                                .policyDirectives(
+                                                                                "default-src 'self'; " +
+                                                                                                "script-src 'self'; " +
+                                                                                                "style-src 'self' 'unsafe-inline'; " +
+                                                                                                "img-src 'self' data: https: blob:; " +
+                                                                                                "font-src 'self' data:; " +
+                                                                                                "connect-src 'self'; " +
+                                                                                                "frame-ancestors 'none'; " +
+                                                                                                "base-uri 'self'; " +
+                                                                                                "form-action 'self';")
+                                                ))
                                 .exceptionHandling(exception -> exception
                                                 .authenticationEntryPoint(jwtAuthenticationEntryPoint))
                                 .sessionManagement(sm -> sm.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
@@ -91,10 +128,18 @@ public class SecurityConfig {
                 configuration.setAllowedOrigins(origins);
                 configuration.setAllowedMethods(Arrays.asList(
                                 "GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
-                configuration.setAllowedHeaders(List.of("*"));
+                // Headers específicos permitidos (más seguro que "*")
+                configuration.setAllowedHeaders(Arrays.asList(
+                                "Authorization",
+                                "Content-Type",
+                                "Accept",
+                                "Origin",
+                                "X-Requested-With",
+                                "Cache-Control",
+                                "X-CSRF-TOKEN"));
                 configuration.setAllowCredentials(true);
                 configuration.setMaxAge(3600L);
-                configuration.setExposedHeaders(Arrays.asList("Authorization"));
+                configuration.setExposedHeaders(Arrays.asList("Authorization", "X-CSRF-TOKEN"));
 
                 UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
                 source.registerCorsConfiguration("/**", configuration);
